--- a/Components/ominifood-desktop/src/index.html
+++ b/Components/ominifood-desktop/src/index.html
@@ -17,6 +17,15 @@
       media="screen"
       href="../css/omini.css"
     />
+    <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule=""
+      src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons/ionicons.js"
+    ></script>
   </head>
   <body>
     <header class="header">
@@ -66,6 +75,17 @@
           </div>
         </div>
       </section>
+      <section class="section-featured">
+        <div class="container">
+          <h2 class="heading-featured-in">As featured in</h2>
+          <div class="logos">
+            <img src="../img/logos/techcrunch.png" alt="" />
+            <img src="../img/logos/business-insider.png" alt="" />
+            <img src="../img/logos/the-new-york-times.png" alt="" />
+            <img src="../img/logos/usa-today.png" alt="" />
+          </div>
+        </div>
+      </section>
       <section class="section-how">
         <div class="container">
           <span class="subheading"> How Omnifood works </span>
@@ -73,7 +93,7 @@
             Your daily dose of health in 3 simple steps
           </h2>
         </div>
-        <div class="container grid grid--2-cols">
+        <div class="container grid grid--2-cols grid--center-v">
           <!-- STEP-01 -->
           <div class="step-text-box">
             <p class="step-number">01</p>
@@ -116,6 +136,66 @@
           <div class="step-img-box">
             <img src="../img/app/app-screen-3.png" alt="" class="step-img" />
           </div>
+        </div>
+      </section>
+      <section class="section-meals">
+        <div class="container">
+          <span class="subheading"> Sample meals</span>
+          <h2 class="heading-secondary">
+            Omnifood AI chooses from 5,000+ recipes
+          </h2>
+        </div>
+        <div class="container grid grid--3-cols">
+          <div class="meal">
+            <img src="../img/meals/meal-1.jpg" alt="" class="meal-img" />
+            <div class="meal-content">
+              <div class="meal-tags">
+                <span class="tag">Vegetarian</span>
+              </div>
+
+              <p class="meal-title">Japanese Gyozas</p>
+              <ul class="meal-attributes">
+                <li class="meal-attribute">
+                  <ion-icon class="meal-icon" name="flame"></ion-icon>
+                  <span> <strong>650</strong> Calories</span>
+                </li>
+                <li class="meal-attribute">
+                  <ion-icon class="meal-icon" name="restaurant"></ion-icon>
+                  <span>NutriScore &reg; <strong>74</strong> </span>
+                </li>
+                <li class="meal-attribute">
+                  <ion-icon class="meal-icon" name="star-half"></ion-icon>
+                  <span><strong>4.9</strong> rating (508)</span>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="meal">
+            <img src="../img/meals/meal-2.jpg" alt="" class="meal-img" />
+
+            <div class="meal-content">
+              <div class="meal-tags">
+                <span class="tag">Vegan and Paleo</span>
+              </div>
+
+              <p class="meal-title">Avocado Salad</p>
+              <ul class="meal-attributes">
+                <li class="meal-attribute">
+                  <ion-icon class="meal-icon" name="flame"></ion-icon>
+                  <span> <strong>400</strong> Calories</span>
+                </li>
+                <li class="meal-attribute">
+                  <ion-icon class="meal-icon" name="restaurant"></ion-icon>
+                  <span>NutriScore &reg; <strong>74</strong> </span>
+                </li>
+                <li class="meal-attribute">
+                  <ion-icon class="meal-icon" name="star-half"></ion-icon>
+                  <span><strong>4.8</strong> rating (441)</span>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="list">Meal List</div>
         </div>
       </section>
     </main>
