--- a/Components/ominifood-desktop/src/index.html
+++ b/Components/ominifood-desktop/src/index.html
@@ -387,8 +387,74 @@
           <h2 class="heading-secondary">Eat well without breaking bank</h2>
         </div>
         <div class="container grid grid--2-cols">
-          <div class="pricing-plan">Plan1</div>
-          <div class="pricing-plan">Plan2</div>
+          <div class="pricing-plan pricing-plan--starter">
+            <header class="plan-header">
+              <p class="plan-name">Starter</p>
+              <p class="plan-price"><span>$</span>399</p>
+              <p class="plan-text">per month. That's just $13 per meal!</p>
+            </header>
+
+            <ul class="list">
+              <li class="list-item">
+                <ion-icon class="list-icon" name="checkmark-circle"></ion-icon
+                ><span><strong> 1 meal</strong> per day</span>
+              </li>
+              <li class="list-item">
+                <ion-icon class="list-icon" name="checkmark-circle"></ion-icon
+                ><span>Order from 11am to 9pm</span>
+              </li>
+              <li class="list-item">
+                <ion-icon class="list-icon" name="checkmark-circle"></ion-icon
+                ><span>Free delivery</span>
+              </li>
+              <li class="list-item">
+                <ion-icon class="list-icon" name="close-circle"></ion-icon>
+                <span></span>
+              </li>
+            </ul>
+            <div class="plan-sign-up">
+              <a href="#" class="btn btn--full margin-right-sm"
+                >Start eating well</a
+              >
+            </div>
+          </div>
+          <div class="pricing-plan pricing-plan--complete">
+            <header class="plan-header">
+              <p class="plan-name">Complete</p>
+              <p class="plan-price"><span>$</span>649</p>
+              <p class="plan-text">per month. That's just $11 per meal!</p>
+            </header>
+
+            <ul class="list">
+              <li class="list-item">
+                <ion-icon class="list-icon" name="checkmark-circle"></ion-icon
+                ><span><strong>2 meal</strong> s per day</span>
+              </li>
+              <li class="list-item">
+                <ion-icon class="list-icon" name="checkmark-circle"></ion-icon
+                ><span>Order <strong>24/7</strong> </span>
+              </li>
+              <li class="list-item">
+                <ion-icon class="list-icon" name="checkmark-circle"></ion-icon
+                ><span>Free delivery</span>
+              </li>
+              <li class="list-item">
+                <ion-icon class="list-icon" name="checkmark-circle"></ion-icon
+                ><span>Get access to latest recipes</span>
+              </li>
+            </ul>
+            <div class="plan-sign-up">
+              <a href="#" class="btn btn--full margin-right-sm"
+                >Start eating well</a
+              >
+            </div>
+          </div>
+        </div>
+        <div class="container grid grid--4-cols">
+          <div class="feature">Feature1</div>
+          <div class="feature">Feature1</div>
+          <div class="feature">Feature1</div>
+          <div class="feature">Feature1</div>
         </div>
       </section>
     </main>
