--- a/Components/ominifood-desktop/css/omini.css
+++ b/Components/ominifood-desktop/css/omini.css
@@ -53,6 +53,15 @@ body {
   display: grid;
   column-gap: 6.4rem;
   row-gap: 9.6rem;
+  /* s */
+}
+/* WAY_ONE */
+/* .grid:last-child {
+  margin-bottom: 0;
+} */
+/* WAT-TWO */
+.grid:not(:last-child) {
+  margin-bottom: 9.6rem;
 }
 .grid--2-cols {
   grid-template-columns: repeat(2, 1fr);
@@ -229,6 +238,7 @@ body {
 .margin-bottom--md {
   margin-bottom: 4.8rem !important;
 }
+
 .center-text {
   text-align: center;
 }
@@ -527,6 +537,30 @@ strong {
   background-color: #ffd43b;
   padding: 0.8rem 8rem;
   transform: rotate(45deg);
+}
+.feature-icon {
+  color: #e67e22;
+  margin-bottom: 3.2rem;
+  height: 3.2rem;
+  width: 3.2rem;
+  background-color: #fdf2e9;
+  padding: 1.6rem;
+  border-radius: 50%;
+}
+.feature-title {
+  font-size: 2.4rem;
+  font-weight: 700;
+  color: #333;
+  margin-bottom: 1.6rem;
+}
+.feature-text {
+  font-size: 1.8rem;
+  line-height: 1.8;
+}
+.plan-details {
+  font-size: 1.6rem;
+  line-height: 1.6;
+  text-align: center;
 }
 /* .section-how div div {
   padding: 100px;
