--- a/Components/ominifood-desktop/css/omini.css
+++ b/Components/ominifood-desktop/css/omini.css
@@ -582,7 +582,7 @@ strong {
 }
 .cta-text-box {
   color: #45260a;
-  padding: 6.4rem;
+  padding: 4.8rem 6.4rem 6.4rem 6.4rem;
 }
 .cta .heading-secondary {
   color: #45260a;
