--- a/Components/ominifood-desktop/src/index.html
+++ b/Components/ominifood-desktop/src/index.html
@@ -503,6 +503,13 @@
                 eating well today. You can cancel or pause anytime. And the
                 first meal is on us!
               </p>
+              <form action="" class="cta-form">
+                <label for="">Full Name</label>
+                <input type="text" placeholder="Your Name" />
+                <label for="">Email</label>
+                <input type="email" name="" id="" placeholder="Your Email" />
+                <button class="btn">Sign up now</button>
+              </form>
             </div>
             <div class="cta-img-box" role="img" aria-label="woman eating"></div>
           </div>
