--- a/Components/ominifood-desktop/css/omini.css
+++ b/Components/ominifood-desktop/css/omini.css
@@ -591,6 +591,7 @@ strong {
 .cta-text {
   font-size: 1.8rem;
   line-height: 1.8;
+  margin-bottom: 4.8rem;
 }
 .cta-img-box {
   background-image: linear-gradient(
@@ -602,7 +603,38 @@ strong {
   background-size: cover;
   background-position: center;
 }
+.cta-form {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 3.2rem;
+  row-gap: 2.4rem;
+}
 
+.cta-form label {
+  display: block;
+  font-size: 1.6rem;
+  font-weight: 500;
+  margin-bottom: 1.2rem;
+}
+
+.cta-form input {
+  width: 100%;
+  padding: 1.2rem;
+  font-size: 1.8rem;
+  font-family: inherit;
+  border: none;
+  background-color: #fdf2e9;
+  border-radius: 9px;
+  box-sizing: 0 1px 2px rgba(0, 0, 0, 0.1);
+}
+.cta-form input::placeholder {
+  color: #aaa;
+}
+.cta-form select {
+}
+
+.cta-form button {
+}
 /* .section-how div div {
   padding: 100px;
   font-size: 50px;
