--- a/Components/ominifood-desktop/src/index.html
+++ b/Components/ominifood-desktop/src/index.html
@@ -504,10 +504,32 @@
                 first meal is on us!
               </p>
               <form action="" class="cta-form">
-                <label for="">Full Name</label>
-                <input type="text" placeholder="Your Name" />
-                <label for="">Email</label>
-                <input type="email" name="" id="" placeholder="Your Email" />
+                <div>
+                  <label for="full-name">Full Name</label>
+                  <input
+                    type="text"
+                    placeholder="Your Name"
+                    id="full-name"
+                    required
+                  />
+                </div>
+                <div>
+                  <label for="email">Email</label>
+                  <input
+                    type="email"
+                    name=""
+                    id="email"
+                    placeholder="me@example.com"
+                  />
+                </div>
+                <div>
+                  <label for="location">Where did you hear about us?</label>
+                  <select name="" id="location">
+                    <option value="Facebook">Facebook</option>
+                    <option value="Instagram">Instagram</option>
+                  </select>
+                </div>
+
                 <button class="btn">Sign up now</button>
               </form>
             </div>
