--- a/Components/ominifood-desktop/css/omini.css
+++ b/Components/ominifood-desktop/css/omini.css
@@ -241,6 +241,10 @@ body {
   box-shadow: inset 0 0 0 3px #fff;
 }
 
+.grid--footer {
+  grid-template-columns: 1.5fr 1.5fr 1fr 1fr 1fr;
+}
+
 /* HELPER CLASS */
 .margin-right-sm {
   margin-right: 1.6rem !important;
@@ -575,7 +579,7 @@ strong {
 
 /* ======================CTA=============================== */
 .section-cta {
-  padding-left: 9.6rem 0;
+  padding-left: 4.8rem 0 12.8rem 0;
 }
 .cta {
   display: grid;
@@ -666,7 +670,25 @@ strong {
 
 /* FOOTER */
 .footer {
-  padding: 9.6rem 0;
+  padding: 12.6rem 0;
+  border-top: 1px solid #eee;
+}
+.logo-col {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.footer-logo {
+  display: block;
+}
+.social-icon {
+  height: 2.4rem;
+  width: 2.4rem;
+}
+.social-links {
+  list-style: none;
+  display: flex;
+  gap: 2.4rem;
 }
 .footer-heading {
   font-size: 1.8rem;
@@ -690,6 +712,25 @@ strong {
 .footer-link:hover,
 .footer-link:active {
   color: #555;
+}
+.copyright {
+  font-size: 1.4rem;
+  line-height: 1.6;
+  color: #767676;
+  /* margin-top: auto; */
+}
+.contacts {
+  font-style: normal;
+  font-size: 1.4rem;
+  line-height: 1.6;
+  color: #767676;
+}
+.contacts-link {
+  text-decoration: none;
+  font-family: inherit;
+}
+.contacts-address {
+  margin-bottom: 4.2rem;
 }
 /* .section-how div div {
   padding: 100px;
