--- a/Components/ominifood-desktop/src/index.html
+++ b/Components/ominifood-desktop/src/index.html
@@ -35,11 +35,11 @@
 
       <nav class="main-nav">
         <ul class="main-nav-list">
-          <li><a href="#" class="main-nav-link">Section 1</a></li>
-          <li><a href="#" class="main-nav-link">Section 2</a></li>
-          <li><a href="#" class="main-nav-link">Section 3</a></li>
-          <li><a href="#" class="main-nav-link">Section 4</a></li>
-          <li><a href="#" class="main-nav-link nav-cta">Section 5</a></li>
+          <li><a href="#" class="main-nav-link">How it works</a></li>
+          <li><a href="#" class="main-nav-link">Meals</a></li>
+          <li><a href="#" class="main-nav-link">Testimonial</a></li>
+          <li><a href="#" class="main-nav-link">Pricing</a></li>
+          <li><a href="#" class="main-nav-link nav-cta">Try for free</a></li>
         </ul>
       </nav>
     </header>
@@ -542,20 +542,26 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container grid grid--5-cols">
+      <div class="container grid grid--footer">
         <div class="logo-col">
           <a href="#" class="footer-logo">
             <img src="../img/omnifood-logo.png" alt="" class="logo" />
           </a>
           <ul class="social-links">
             <li>
-              <a href=""><ion-icon name="logo-instagram"></ion-icon></a>
+              <a href=""
+                ><ion-icon class="social-icon" name="logo-instagram"></ion-icon
+              ></a>
             </li>
             <li>
-              <a href=""><ion-icon name="logo-facebook"></ion-icon></a>
+              <a href=""
+                ><ion-icon class="social-icon" name="logo-facebook"></ion-icon
+              ></a>
             </li>
             <li>
-              <a href=""><ion-icon name="logo-twitter"></ion-icon></a>
+              <a href=""
+                ><ion-icon class="social-icon" name="logo-twitter"></ion-icon
+              ></a>
             </li>
           </ul>
           <p class="copyright">
@@ -565,10 +571,15 @@
         <div class="address-col">
           <p class="footer-heading">Contact us</p>
           <address class="contacts">
-            <p>623 Harrison St., 2nd Floor, San Francisco, CA 94107</p>
+            <p class="contacts-address">
+              623 Harrison St., 2nd Floor, San Francisco, CA 94107
+            </p>
             <p>
-              <a href="tel:415-201-6370">415-201-6370</a><br />
-              <a href="mailto:hello@omnifood.com">hello@omnifood.com</a>
+              <a class="contacts-link" href="tel:415-201-6370">415-201-6370</a
+              ><br />
+              <a class="contacts-link" href="mailto:hello@omnifood.com"
+                >hello@omnifood.com</a
+              >
             </p>
           </address>
         </div>
